# planet-game

./: .env  Cargo.toml  Ideas.md  Info.md  Inspo.md  Readme.md  Todo.md  create_component.sh
assets/: texture_atlas.py
assets/clouds/: 00.aseprite
assets/foliage/: trunk.aseprite
assets/foliage/birch/: aaaa.aseprite
assets/machines/: rockership.aseprite  rockership2.aseprite  rocketship3.aseprite
assets/machines/solar_panel/: afawawfawf.aseprite
assets/machines/wind_turbine/: save.aseprite
assets/player/: player.aseprite
assets/shaders/: cable.wgsl  planet.wgsl  planet_atmosphere.wgsl  post_processing.wgsl  space.wgsl  test.wgsl  test121221.wgsl  tile_material_outline.wgsl  to_linear.py
assets/shaders/flag/: flag.wgsl
src/: main.rs
src/camera/: camera.rs  mod.rs  old_camera.rs  post_processing.rs
src/camera/background/: background.rs
src/components/: mod.rs
src/components/cable/: cable.rs  mod.rs  slot.rs  slot_state.rs
src/components/debug/: debug.rs
src/components/foliage/: animation.rs  foliage.rs  grass.rs  mod.rs  rock.rs  stone.rs  texture.rs  tree.rs
src/components/planet/: debug.rs  mesh.rs  meshtest.rs  mod.rs  planet.rs
src/components/player/: player.rs
src/components/poi/: mod.rs  poi.rs
src/components/slot/: mod.rs  slot.rs  state.rs
src/components/tile/: debug.rs  empty.rs  material.rs  mod.rs  plugin.rs  power_pole.rs  remove.rs  (+4 more)
src/functional/: mod.rs
src/systems/: mod.rs
src/ui/: hud.rs  info_text.rs  inventory.rs  mod.rs  stats.rs  ui.rs
src/utils/: audio.rs  color.rs  logger.rs  mod.rs  sprite_bounds.rs
(+34 files in other folders)
