[package]
name = "game_test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["wav"] }
bevy-inspector-egui = "0.28.1"
dotenv = "0.15.0"
enum_delegate = "0.2.0"
lazy_static = "1.5.0"
rand = "0.8.5"
 
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3